--- a/html/simple_website.html
+++ b/html/simple_website.html
@@ -6,8 +6,8 @@
     </head>
 
     <body>
-        <h1>Brad's Basic Website</h1>
-        <p>Hi, <strong> name is Brad</strong>, and welcome to my <em>very basic HTML website</em>.</p>
+        <h1>Pedro's Basic Website</h1>
+        <p>Hi, <strong> name is Pedro</strong>, and welcome to my <em>very basic HTML website</em>.</p>
 
         <hr>
 
@@ -66,7 +66,7 @@
 
         <hr>
 
-        <p>&copy; 2021 &mdash; Brad Hussey</p>
+        <p>&copy; 2021 &mdash; Pedro Monteiro</p>
     </body>
 
 </html>
