--- a/html/css3/columns.html
+++ b/html/css3/columns.html
@@ -4,7 +4,7 @@
     <head>
         <title>CSS3 Columns</title>
         <link rel="stylesheet" type="text/css" href="normalize.css">
-        <link rel="stylesheet" type="text/css" href="style2.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 
     <body id="colors">
