--- a/examples/bootstrap/index.html
+++ b/examples/bootstrap/index.html
@@ -9,12 +9,42 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link href="css/styles.css" rel="stylesheet">
 
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <a href="" class="btn btn-primary">this is a button</a>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-7">
+           <h1>Hello friends!</h1>
+           <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+            molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+            numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
+            optio, eaque rerum!
+          </p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+            molestiae quas vel sint commodi repudiandae consequuntur.
+          </p>
+        </div>
+        <div class="col-sm-5">
+          <h3>Side bar</h3>
+          <ul>
+            <li>one</li>
+            <li>two</li>
+            <li>three</li>
+          </ul>
+        </div>
+
+        <!--<div class="col-md-6 col-sm-8 col-xs-10 highlight">Hello World!</div>
+        <div class="col-md-6 col-sm-4 col-xs-2 highlight">Hello World!</div>
+      </div>
+      <div class="row">
+        <div class="col-md-8 highlight">content over here</div>
+        <div class="col-md-4 highlight">side bar</div>-->
+      </div>
+    </div>
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
