--- a/examples/bootstrap/modal.html
+++ b/examples/bootstrap/modal.html
@@ -9,6 +9,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="css/styles.css" rel="stylesheet">
 
 
@@ -16,8 +17,34 @@
   </head>
   <body>
     <div class="container">
-        <div class="page-header">
-            <button type="button" class="btn btn-danger btn-lg" data-bs-toggle="modal" data-bs-target="#updateCreditCard"></button>
+        <button type="button" class="btn btn-danger btn-lg" data-bs-toggle="modal" data-bs-target="#exampleModal">
+          Update Credit Card
+        </button>
+        
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="modal-title" id="exampleModalLabel"><i class="bi bi-credit-card"></i> Update Credit Card</h4>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <div class="form-group">
+                  <label>Name on Card</label>
+                  <input type="text" placeholder="Name on Card" class="form-control">
+                </div>
+                <div class="form-group">
+                  <label>Credit Card Number</label>
+                  <input type="text" placeholder="Credit Card Number" class="form-control">
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn btn-outline-success">Submit</button>
+              </div>
+            </div>
+          </div>
         </div>
     </div><!-- container -->
 
