--- a/examples/bootstrap/modal.html
+++ b/examples/bootstrap/modal.html
@@ -11,6 +11,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="css/styles.css" rel="stylesheet">
+    <style>
+
+      .money{
+        margin-bottom: 5px;
+        border-radius: 5px;
+        cursor: pointer;
+        color: black;
+        font-size: 18px;
+        width: 100%;
+        border: solid 1px lightgray;
+      }
+
+      .money:hover{
+        background: lightgray;
+      }
+
+      .money:active,
+      .money:focus {
+        background: lightgray;
+      }
+    </style>
 
 
     <title>Bootstrap Navbar</title>
@@ -30,13 +51,41 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
+                <div class="row">
+                  <div class="col-sm-3">
+                    <button class="btn btn-outline-light money">5€</button>
+                  </div>
+                  <div class="col-sm-3">
+                    <button class="btn btn-outline-light money">10€</button>
+                  </div>
+                  <div class="col-sm-3">
+                    <button class="btn btn-outline-light money">25€</button>
+                  </div>
+                  <div class="col-sm-3">
+                    <button class="btn btn-outline-light money">50€</button>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label>Credit Card Number</label>
+                  <input type="text" placeholder="**** **** **** ****" class="form-control">
+                </div>
                 <div class="form-group">
                   <label>Name on Card</label>
                   <input type="text" placeholder="Name on Card" class="form-control">
                 </div>
-                <div class="form-group">
-                  <label>Credit Card Number</label>
-                  <input type="text" placeholder="Credit Card Number" class="form-control">
+                <div class="row">
+                  <div class="col">
+                    <div class="form-group">
+                      <label>Expiration Date</label>
+                      <input type="text" placeholder="MM/YY" class="form-control">
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="form-group">
+                      <label>CVC</label>
+                      <input type="text" placeholder="CVC" class="form-control">
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="modal-footer">
@@ -58,5 +107,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
     -->
+    <script>
+      
+    </script>
   </body>
 </html>
