--- a/examples/Angular/index.html
+++ b/examples/Angular/index.html
@@ -1,15 +1,21 @@
-<!DOCTYPE html>
-<htm>
-    <head>  
-        <meta charset="utf-8">
-        <title>ng-cribs</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    </head>
-    <body ng-app="ngCribs">
-        <h1>Hello!</h1>
-    </body>
+<!DOCTYPE html>  
+<html>  
+<head>  
+    <meta charset="utf 8">
+    <title>ng-cribs</title>  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+   
+</head>  
+<body ng-app="ngCribs" ng-controller="cribsController">
+    <div class="card card-body bg-light" ng-repeat="crib in cribs">
+        <h3>{{crib.address}}</h3>
+        <p><strong>Type:</strong> {{crib.type}}</p>
+        <p><strong>Description:</strong> {{crib.description}}</p>
+        <p><strong>Price:</strong> {{crib.price | currency}}</p>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.6/ui-bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.6/ui-bootstrap-tpls.min.js"></script>
-    <script src="app.js"></script>
-</htm>
+    <script src="scripts/cribsController.js"></script>
+</body>  
+</html>
